--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projects</title>
+        <title>About</title>
         <link rel="stylesheet" type="text/css" href="theme.css">
     </head>
 
@@ -13,14 +13,15 @@
             <nav>
                 <ul>
                     <li><a href="index.html">home</a></li>
-                    <li><a href="about.html">about</a></li>
-                    <li><a href="projects.html" class="active">projects</a></li>
+                    <li><a href="about.html" class="active">about</a></li>
+                    <li><a href="projects.html">projects</a></li>
                     <li><a href="contact.html">contact</a></li>
+
                 </ul>
             </nav>
         
-            <h1>projects</h1>
-            <h4>here are my projects...</h4>
+            <h1>about me</h1>
+            <h4>...</h4>
                 
         </div>
  
