--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projects</title>
+        <title>Clara Chen</title>
         <link rel="stylesheet" type="text/css" href="theme.css">
     </head>
 
@@ -14,13 +14,14 @@
                 <ul>
                     <li><a href="index.html">home</a></li>
                     <li><a href="about.html">about</a></li>
-                    <li><a href="projects.html" class="active">projects</a></li>
-                    <li><a href="contact.html">contact</a></li>
+                    <li><a href="projects.html">projects</a></li>
+                    <li><a href="contact.html" class="active">contact</a></li>
+
                 </ul>
             </nav>
         
-            <h1>projects</h1>
-            <h4>here are my projects...</h4>
+            <h1>contact</h1>
+            <h4>...</h4>
                 
         </div>
  
