--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="index.html" class="active">home</a></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="projects.html">projects</a></li>
+                    <li><a href="contact.html">contact</a></li>
+
                 </ul>
             </nav>
         
-            <h1>Clara Chen</h1>
-            <h4>Welcome to my personal website!</h4>
+            <h1>clara chen</h1>
+            <h4>welcome to my personal website!</h4>
                 
         </div>
  
