Edited projects page

--- a/projects.html
+++ b/projects.html
@@ -20,22 +20,30 @@
             </nav>
         
             <h1>projects</h1>
-            <h4>here are my projects...</h4>
+            <h4>check out some of the things i've built</h4>
             
             <div class="project-container">
                 <a href="https://github.com/clarachenn/ZotRater" class="project-panel">
                     <h2>ZotRater</h2>
-                    <h4>this project...</h4>
+                    <p>ZotRater is an academic planning tool tailored for students seeking an optimized 
+                        and well-balanced class schedule. This website empowers students by providing 
+                        insightful ratings based on factors such as professor reviews, expected time 
+                        commitments, and real-time statistics sourced from APIs.</p>
                 </a>
 
                 <a href="https://github.com/clarachenn/clarachenn.github.io" class="project-panel">
                     <h2>personal website</h2>
-                    <h4>this project...</h4>
+                    <p>My personal website is where I showcase my portfolio of projects, providing 
+                        visitors with a glimpse into my skills and passions. Users can explore my 
+                        work and learn more about my background, skills, and experiences.</p>
                 </a>
 
                 <a href="https://github.com/clarachenn/corn-maze-3d-game" class="project-panel">
-                    <h2>corn maze</h2>
-                    <h4>this project...</h4>
+                    <h2>CornMaze</h2>
+                    <p>CornMaze is an immersive single-player 3D game that challenges players to 
+                        navigate through a maze, collect valuable items, and make their way to safety. 
+                        The maze is filled with twists, turns, and unexpected dangers, providing an 
+                        exciting and thrilling gaming experience.</p>
                 </a>
 
             </div>
