Edited about page

--- a/about.html
+++ b/about.html
@@ -21,7 +21,21 @@
             </nav>
         
             <h1>about me</h1>
-            <h4>...</h4>
+            <h2>Hello! I am Clara.</h2>
+            <h4>I am a second-year Computer Science student at the University of California, Irvine. 
+                My journey in software development began in 9th grade, and since then, I have 
+                cultivated a passion for all things related to technology. I am proficient in 
+                languages such as Python, Java, C++, HTML, and CSS. As I progress through my studies, 
+                I am eager to explore advanced topics, engage in meaningful projects, and continue my 
+                growth in the dynamic field of computer science.</h4>
+
+            <h4>In addition to my academic pursuits, I actively engage in a diverse range of 
+                extracurricular activities both on and off campus. I serve as a dedicated Academic 
+                and Alumni Committee Member at the ICS Student Council, contribute as a Corporate 
+                Committee Member for VenusHacks, and participate in Hack at UCI. Furthermore, my 
+                commitment extends to projects, and I proudly contribute as a Web Developer for 
+                CanSat, combining my technical skills with a passion for innovation. Beyond the 
+                realm of technology, I am also a member of the Taekwondo Club at UCI.</h4>
                 
         </div>
  
