Working on education panel

--- a/about.html
+++ b/about.html
@@ -36,6 +36,10 @@
                 commitment extends to projects, and I proudly contribute as a Web Developer for 
                 CanSat, combining my technical skills with a passion for innovation. Beyond the 
                 realm of technology, I am also a member of the Taekwondo Club at UCI.</h4>
+
+            <div class="education-container">
+                <h2>Education</h2>
+            </div>
                 
         </div>
  
