--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
             </nav>
         
             <h1>projects</h1>
-            <h3>check out some of the things i've built</h3>
+            <h3>Check out some of the things I've built</h3>
             
             <div class="project-container">
                 <a href="https://github.com/clarachenn/ZotRater" class="project-panel">
