Edited education section

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             </nav>
         
             <h1>about me</h1>
-            <h2>Hello! I am Clara.</h2>
+            <h2>Hello, I am Clara!</h2>
             <h4>I am a second-year Computer Science student at the University of California, Irvine. 
                 My journey in software development began in 9th grade, and since then, I have 
                 cultivated a passion for all things related to technology. I am proficient in 
@@ -39,6 +39,21 @@
 
             <div class="education-container">
                 <h2>Education</h2>
+                <div class="education-panel">
+                    <h4>University of California, Irvine</h4>
+                    <h6>Bachelor's  Degree      |     2022 - Present</h6>
+                    <h5>Major: Computer Science</h5>
+                    <h5>Activities: ICS Student Council (AAA Committee Member), Hack at UCI, 
+                        VenusHacks (Corporate Committee Member), Lab Tutor, Learning Assistant, Taekwondo Club</h5>
+                </div>
+
+                <div class="education-panel">
+                    <h4>Lord Byng Secondary School</h4>
+                    <h6>High School Degree      |       2017 - 2022</h6>
+                    <h5>Activities: Peer Counselor, Girls Will Stay (Vice President), 
+                        Penpal Program, Yearbook (Staff Lead), Swim Team, Ski & Snowboard Team</h5>
+                    <h5>Awards: Award for Academics (2022), Principal's List (2017-2022)</h5>
+                </div>
             </div>
                 
         </div>
