--- a/about.html
+++ b/about.html
@@ -40,6 +40,11 @@
             <div class="education-container">
                 <h2>Education</h2>
                 <div class="education-panel">
+
+                    <div class="uci-logo">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/uci_logo.png">
+                    </div>
+
                     <h4>University of California, Irvine</h4>
                     <h6>Bachelor's  Degree      |     2022 - Present</h6>
                     <p>Major: Computer Science</p>
@@ -48,6 +53,11 @@
                 </div>
 
                 <div class="education-panel">
+
+                    <div class="lbss-logo">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/lbss.png">
+                    </div>
+
                     <h4>Lord Byng Secondary School</h4>
                     <h6>High School Degree      |       2017 - 2022</h6>
                     <p>Activities: Peer Counselor, Girls Will Stay (Vice President), 
@@ -60,8 +70,8 @@
                 <h2>Experience</h2>
                 <div class="experience-panel">
 
-                    <div class="experience-logo">
-                        <img src="tkd1.jpg">
+                    <div class="dbh-logo">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/uci_dbh.jpg">
                     </div>
 
                     <h4>Computer Science Learning Assistant</h4>
@@ -74,6 +84,11 @@
                 </div>
 
                 <div class="experience-panel">
+
+                    <div class="isccs-logo">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/icssc.png">
+                    </div>
+
                     <h4>Academic and Alumni Affairs Committee Member</h4>
                     <h6>UCI ICS Student Council</h6>
                     <h6>Sep 2022 - Present</h6>
@@ -83,6 +98,11 @@
                 </div>
 
                 <div class="experience-panel">
+
+                    <div class="dbh-logo">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/uci_dbh.jpg">
+                    </div>
+
                     <h4>Computer Science Lab Tutor</h4>
                     <h6>UC Irvine Donald Bren School of Information and Computer Sciences</h6>
                     <h6>Apr 2023 - Jun 2023</h6>
@@ -109,7 +129,7 @@
                             come with this martial art, making it a fulfilling part of my life.</p>
                     </div>
                     <div class="ec-image">
-                        <img src="tkd1.jpg" width=100% onclick="openPopup()" alt="Taekwondo image">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/tkd1.jpg" width=100% onclick="openPopup()" alt="Taekwondo image">
                     </div>
                 </div>
             </div>
@@ -118,10 +138,10 @@
                 <div class="tkdPopup-content" id="popupContent">
                     <span class="tkdPopup-close" onclick="closePopup()">&times;</span>
                     <div id="tkd-gallery">
-                        <img src="tkd1.jpg" width="600" alt="Taekwondo image">
-                        <img src="tkd2.jpg" width="600" alt="Taekwondo image">
-                        <img src="tkd3.jpg" width="600" alt="Taekwondo image">
-                        <img src="tkd4.jpg" width="600" alt="Taekwondo image">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/tkd1.jpg" width="600" alt="Taekwondo image 1">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/tkd2.jpg" width="600" alt="Taekwondo image 2">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/tkd3.jpg" width="600" alt="Taekwondo image 3">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/tkd4.jpg" width="600" alt="Taekwondo image 4">
                         <button class="prev" onclick="prevTkdImage()">❮</button>
                         <button class="next" onclick="nextTkdImage()">❯</button>
                     </div>
