Made images public

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                 <div class="education-panel">
 
                     <div class="uci-logo">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/uci_logo.png">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/uci_logo.png">
                     </div>
 
                     <h4>University of California, Irvine</h4>
@@ -55,7 +55,7 @@
                 <div class="education-panel">
 
                     <div class="lbss-logo">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/lbss.png">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/lbss.png">
                     </div>
 
                     <h4>Lord Byng Secondary School</h4>
@@ -71,7 +71,7 @@
                 <div class="experience-panel">
 
                     <div class="dbh-logo">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/uci_dbh.jpg">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/uci_dbh.jpg">
                     </div>
 
                     <h4>Computer Science Learning Assistant</h4>
@@ -86,7 +86,7 @@
                 <div class="experience-panel">
 
                     <div class="isccs-logo">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/icssc.png">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/icssc.png">
                     </div>
 
                     <h4>Academic and Alumni Affairs Committee Member</h4>
@@ -100,7 +100,7 @@
                 <div class="experience-panel">
 
                     <div class="dbh-logo">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/uci_dbh.jpg">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/uci_dbh.jpg">
                     </div>
 
                     <h4>Computer Science Lab Tutor</h4>
@@ -128,7 +128,7 @@
                             come with this martial art, making it a fulfilling part of my life.</p>
                     </div>
                     <div class="ec-image">
-                        <img src="tkd1.jpg" width=100% onclick="openPopup()" alt="Taekwondo Image">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd1.jpg" width=100% onclick="openPopup()" alt="Taekwondo Image">
                     </div>
                 </div>
 
@@ -136,13 +136,13 @@
                     <div class="popup-content" id="popupContent">
                         <span class="popup-close" onclick="closePopup()">&times;</span>
                         <div id="tkd-gallery">
-                            <img src="tkd1.jpg" width="600" alt="Taekwondo Kicking 1">
-                            <img src="tkd2.jpg" width="600" alt="Taekwondo Kicking 2">
-                            <img src="tkd3.jpg" width="600" alt="Taekwondo Image">
-                            <img src="tkd4.jpg" width="600" alt="Taekwondo Competition">
-                            <img src="tkd5.jpg" width="600" alt="Taekwondo Competition Team">
-                            <img src="tkd6.jpg" width="600" alt="Taekwondo UCI 1">
-                            <img src="tkd7.jpg" width="600" alt="Taekwondo UCI 2">
+                            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd1.jpg" width="600" alt="Taekwondo Kicking 1">
+                            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd2.jpg" width="600" alt="Taekwondo Kicking 2">
+                            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd3.jpg" width="600" alt="Taekwondo Image">
+                            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd4.jpg" width="600" alt="Taekwondo Competition">
+                            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd5.jpg" width="600" alt="Taekwondo Competition Team">
+                            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd6.jpg" width="600" alt="Taekwondo UCI 1">
+                            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd7.jpg" width="600" alt="Taekwondo UCI 2">
 
                             <button class="prev" onclick="prevTkdImage()">❮</button>
                             <button class="next" onclick="nextTkdImage()">❯</button>
@@ -152,7 +152,7 @@
 
                 <div class="ec-panel">
                     <div class="ec-image">
-                        <img src="VH1.jpg" width=100% onclick="openVHPopup()" alt="VenusHacks Image">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/VH1.JPG" width=100% onclick="openVHPopup()" alt="VenusHacks Image">
                     </div>
                     <div class="ec-text">
                         <h4>Hack at UCI</h4>
@@ -169,11 +169,11 @@
                     <div class="popup-content" id="VHPopupContent">
                         <span class="popup-close" onclick="closeVHPopup()">&times;</span>
                         <div id="vh-gallery">
-                            <img src="VH1.JPG" width="600" alt="VenusHacks Image 1">
-                            <img src="VH2.JPG" width="600" alt="VenusHacks Image 2">
-                            <img src="VH3.JPG" width="600" alt="VenusHacks Image 3">
-                            <img src="VH4.JPG" width="600" alt="VenusHacks Image 4">
-                            <img src="VH5.JPG" width="600" alt="VenusHacks Team Picture">
+                            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/VH1.JPG" width="600" alt="VenusHacks Image 1">
+                            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/VH2.JPG" width="600" alt="VenusHacks Image 2">
+                            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/VH3.JPG" width="600" alt="VenusHacks Image 3">
+                            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/VH4.JPG" width="600" alt="VenusHacks Image 4">
+                            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/VH5.JPG" width="600" alt="VenusHacks Team Picture">
                             <button class="prev" onclick="prevVHImage()">❮</button>
                             <button class="next" onclick="nextVHImage()">❯</button>
                         </div>
@@ -195,7 +195,7 @@
                             speaking experience for all members.</p>
                     </div>
                     <div class="ec-image">
-                        <img src="tm.jpg" width=100% alt="Gavel Club Image">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tm.jpg" width=100% alt="Gavel Club Image">
                     </div>
                 </div>
             </div>
