--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Clara Chen</title>
         <link rel="stylesheet" type="text/css" href="theme.css">
+        <link rel="stylesheet" type="text/css" href="theme-light.css" id="lightStylesheet">
+        <link rel="stylesheet" type="text/css" href="theme-dark.css" disabled id="darkStylesheet">
+        <script src="themeToggler.js"></script>
     </head>
 
     <body>
@@ -16,7 +19,10 @@
                     <li><a href="about.html">about</a></li>
                     <li><a href="projects.html">projects</a></li>
                     <li><a href="contact.html">contact</a></li>
-
+                    
+                    <button id="themeButton" onclick="toggleTheme()">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/sun.png" alt="Light Theme">
+                    </button>
                 </ul>
             </nav>
         
