--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Projects</title>
         <link rel="stylesheet" type="text/css" href="theme.css">
+        <link rel="stylesheet" type="text/css" href="theme-light.css" id="lightStylesheet">
+        <link rel="stylesheet" type="text/css" href="theme-dark.css" disabled id="darkStylesheet">
+        <script src="themeToggler.js"></script>
+        <button id="themeButton" onclick="toggleTheme()">
+            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/sun.png" alt="Light Theme">
+        </button>
     </head>
 
     <body>
@@ -16,6 +22,8 @@
                     <li><a href="about.html">about</a></li>
                     <li><a href="projects.html" class="active">projects</a></li>
                     <li><a href="contact.html">contact</a></li>
+
+                     
                 </ul>
             </nav>
         
