Theme saves across pages

--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,6 @@
         <link rel="stylesheet" type="text/css" href="theme-light.css" id="lightStylesheet">
         <link rel="stylesheet" type="text/css" href="theme-dark.css" disabled id="darkStylesheet">
         <script src="themeToggler.js"></script>
-        <button id="themeButton" onclick="toggleTheme()">
-            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/sun.png" alt="Light Theme">
-        </button>
     </head>
 
     <body>
@@ -22,10 +19,12 @@
                     <li><a href="about.html">about</a></li>
                     <li><a href="projects.html" class="active">projects</a></li>
                     <li><a href="contact.html">contact</a></li>
-
-                     
                 </ul>
             </nav>
+
+            <button id="themeButton" onclick="toggleTheme()">
+                <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/moon.png" alt="Light Theme">
+            </button>
         
             <h1>projects</h1>
             <h3>Check out some of the things I've built</h3>
