Moved theme images to file

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
             </nav>
 
             <button id="themeButton" onclick="toggleTheme()">
-                <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/moon.png" alt="Light Theme">
+                <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/themes/sun.png" alt="Light Theme">
             </button>
         
             <h1>projects</h1>
