--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
             </nav>
 
             <button id="themeButton" onclick="toggleTheme()">
-                <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/sun.png" alt="Light Theme">
+                <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/themes/sun.png" alt="Light Theme">
             </button>
-            
+
             <h1>about me</h1>
             <h2>Hello, I am Clara!</h2>
             <h4>I am a second-year Computer Science student at the University of California, Irvine. 
