--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </nav>
 
             <button id="themeButton" onclick="toggleTheme()">
-                <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/sun.png" alt="Light Theme">
+                <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/themes/sun.png" alt="Light Theme">
             </button>
         
             <h1>clara chen</h1>
