Added github logo/link

--- a/contact.html
+++ b/contact.html
@@ -21,16 +21,17 @@
                     <li><a href="contact.html" class="active">contact</a></li>
                 </ul>
             </nav>
-        
-            <button id="themeButton" onclick="toggleTheme()">
+             <button id="themeButton" onclick="toggleTheme()">
                 <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/themes/sun.png" alt="Light Theme">
-            </button>
 
             <h1>contact</h1>
             <h4>...</h4>
-                
         </div>
- 
-    </body>
+
+        <a id="githubButton" href="https://github.com/clarachenn">
+            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/github-light.png" alt="GitHub Logo">
+        </a>
+
+     </body>
 
 </html>
