--- a/projects.html
+++ b/projects.html
@@ -53,11 +53,18 @@
                         exciting and thrilling gaming experience.</p>
                 </a>
 
+                <footer>
+                    <a href="https://github.com/clarachenn/corn-maze-3d-game"></a>
+
+                </footer>
+
             </div>
 
                 
         </div>
- 
+        <a id="githubButton" href="https://github.com/clarachenn">
+            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/github-light.png" alt="GitHub Logo">
+        </a>
     </body>
 
 </html>
