--- a/about.html
+++ b/about.html
@@ -207,6 +207,10 @@
                 </div>
             </div>
         </div>
+        <a id="githubButton" href="https://github.com/clarachenn">
+            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/github-light.png" alt="GitHub Logo">
+        </a>
+        
         <script src="popupHandler.js"></script>
     </body>
 
