--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <h4>welcome to my personal website!</h4>
                 
         </div>
- 
+        <a id="githubButton" href="https://github.com/clarachenn">
+            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/github-light.png" alt="GitHub Logo">
+        </a>
     </body>
 
 </html>
