--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
             </nav>
              <button id="themeButton" onclick="toggleTheme()">
                 <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/themes/sun.png" alt="Light Theme">
+             </button>    
 
             <h1>contact</h1>
             <h4>...</h4>
@@ -30,6 +31,10 @@
 
         <a id="githubButton" href="https://github.com/clarachenn">
             <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/github-light.png" alt="GitHub Logo">
+        </a>
+
+        <a id="linkedinButton" href="https://www.linkedin.com/in/clarachenn/">
+            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/linkedin-light.png" alt="LinkedIn Logo">
         </a>
 
      </body>
