--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <a id="githubButton" href="https://github.com/clarachenn">
             <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/github-light.png" alt="GitHub Logo">
         </a>
+
+        <a id="linkedinButton" href="https://www.linkedin.com/in/clarachenn/">
+            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/linkedin-light.png" alt="LinkedIn Logo">
+        </a>
     </body>
 
 </html>
