Added email button

--- a/about.html
+++ b/about.html
@@ -215,6 +215,10 @@
             <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/linkedin-light.png" alt="LinkedIn Logo">
         </a>
 
+        <a id="emailButton" href="mailto:clarachenn1@gmail.com">
+            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/contact-buttons/email-light.png" alt="Email Logo">
+        </a>
+
         <script src="popupHandler.js"></script>
     </body>
 
