--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <a id="linkedinButton" href="https://www.linkedin.com/in/clarachenn/">
             <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/linkedin-light.png" alt="LinkedIn Logo">
         </a>
+
+        <a id="emailButton" href="mailto:clarachenn1@gmail.com">
+            <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/contact-buttons/email-light.png" alt="Email Logo">
+        </a>
     </body>
 
 </html>
