Added MV project

--- a/projects.html
+++ b/projects.html
@@ -36,13 +36,22 @@
                         and well-balanced class schedule. This website empowers students by providing 
                         insightful ratings based on factors such as professor reviews, expected time 
                         commitments, and real-time statistics sourced from APIs.</p>
+                    <p><strong>Collaborators:</strong> Laila Wafaie, Waylon Zhu, Maitreyi Pareek</p>
                 </a>
 
                 <a href="https://github.com/clarachenn/clarachenn.github.io" class="project-panel">
-                    <h2>personal website</h2>
+                    <h2>Personal Website</h2>
                     <p>My personal website is where I showcase my portfolio of projects, providing 
                         visitors with a glimpse into my skills and passions. Users can explore my 
                         work and learn more about my background, skills, and experiences.</p>
+                </a>
+
+                <a href="http://mainviewcpa.com" class="project-panel">
+                    <h2>Mainview Website</h2>
+                    <p>Mainview CPA Inc. is a professional accounting firm. The website is 
+                        thoughtfully designed with a user-friendly interface, ensuring that 
+                        visitors can effortlessly access essential details about the firm, 
+                        including the diverse array of accounting services offered.</p>
                 </a>
 
                 <a href="https://github.com/clarachenn/corn-maze-3d-game" class="project-panel">
@@ -52,11 +61,6 @@
                         The maze is filled with twists, turns, and unexpected dangers, providing an 
                         exciting and thrilling gaming experience.</p>
                 </a>
-
-                <footer>
-                    <a href="https://github.com/clarachenn/corn-maze-3d-game"></a>
-
-                </footer>
 
             </div>
 
