Editing home page

--- a/index.html
+++ b/index.html
@@ -28,8 +28,20 @@
         
             <h1>clara chen</h1>
             <h3>Welcome to my personal website!</h3>
+            <h2>I am a...</h2>
                 
         </div>
+
+        <div class="index-panel">
+            <div class="index-about-panel">
+                <h2>hello!</h2>
+                <h3>allow me to introduce myself.</h3>
+                <a id="aboutMeButton" href="about.html">
+                    <h3>about me</h3>
+                </a>
+            </div>
+        </div>
+
         <a id="githubButton" href="https://github.com/clarachenn">
             <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/github-light.png" alt="GitHub Logo">
         </a>
