Added projects on home page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
             </div>
         </div>
 
+        <div class="index-container">
+            <h1>check out some of my <a href="projects.html">projects</a></h1>
+
+            <div class="project-container-vertical">
+                <a href="https://github.com/clarachenn/ZotRater" class="project-panel2">
+                    <h2>ZotRater</h2>
+                </a>
+
+                <a href="http://mainviewcpa.com" class="project-panel2">
+                    <h2>Mainview Website</h2>
+                </a>
+
+                <a href="https://github.com/clarachenn/corn-maze-3d-game" class="project-panel2">
+                    <h2>CornMaze</h2>
+                </a>
+            </div>
+        </div>
+
+
         <a id="githubButton" href="https://github.com/clarachenn">
             <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/github-light.png" alt="GitHub Logo">
         </a>
