Fixed style using AChecker

--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
 
             <h1>about me</h1>
             <h2>Hello, I am Clara!</h2>
+            <h3></h3>
             <h4>I am a second-year Computer Science student at the University of California, Irvine. 
                 My journey in software development began in 9th grade, and since then, I have 
                 cultivated a passion for all things related to technology. I am proficient in 
@@ -49,11 +50,11 @@
                 <div class="education-panel">
 
                     <div class="uci-logo">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/uci_logo.png">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/uci_logo.png" alt="UCI Logo">
                     </div>
-
+                    <h3></h3>
                     <h4>University of California, Irvine</h4>
-                    <h6>Bachelor's  Degree      |     2022 - Present</h6>
+                    <h5>Bachelor's  Degree      |     2022 - Present</h5>
                     <p>Major: Computer Science</p>
                     <p>Activities: ICS Student Council (AAA Committee Member), Hack at UCI, 
                         VenusHacks (Corporate Committee Member), Lab Tutor, Learning Assistant, Taekwondo Club</p>
@@ -62,11 +63,11 @@
                 <div class="education-panel">
 
                     <div class="lbss-logo">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/lbss.png">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/lbss.png" alt="Lord Byng Logo">
                     </div>
-
+                    <h3></h3>
                     <h4>Lord Byng Secondary School</h4>
-                    <h6>High School Degree      |       2017 - 2022</h6>
+                    <h5>High School Degree      |       2017 - 2022</h5>
                     <p>Activities: Peer Counselor, Girls Will Stay (Vice President), 
                         Penpal Program, Yearbook (Staff Lead), Swim Team, Ski & Snowboard Team</p>
                     <p>Awards: Award for Academics (2022), Principal's List (2017-2022)</p>
@@ -78,12 +79,12 @@
                 <div class="experience-panel">
 
                     <div class="dbh-logo">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/uci_dbh.jpg">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/uci_dbh.jpg" alt="DBH Logo">
                     </div>
-
+                    <h3></h3>
                     <h4>Computer Science Learning Assistant</h4>
-                    <h6>UC Irvine Donald Bren School of Information and Computer Sciences</h6>
-                    <h6>Sept 2023 - Present</h6>
+                    <h5>UC Irvine Donald Bren School of Information and Computer Sciences</h5>
+                    <h5>Sept 2023 - Present</h5>
                     <p>- Explained complex computer science topics, including the Python Data Model, recursion, asymptotic analysis, functional programming, and databases, to intermediate programming students.</p>
                     <p>- Collaborated with students in debugging sessions, addressing and resolving programming challenges together.</p>
                     <p>- Taught students how to write effective unit tests for their programs, providing them with a practical skill for program validation and improvement.</p>
@@ -93,12 +94,12 @@
                 <div class="experience-panel">
 
                     <div class="icssc-logo">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/icssc.png">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/icssc.png" alt="ICSSC Logo">
                     </div>
-
+                    <h3></h3>
                     <h4>Academic and Alumni Affairs Committee Member</h4>
-                    <h6>UCI ICS Student Council</h6>
-                    <h6>Sep 2022 - Present</h6>
+                    <h5>UCI ICS Student Council</h5>
+                    <h5>Sep 2022 - Present</h5>
                     <p>- Actively organized and coordinated UCI events for faculty, alumni, and undergraduates, securing guest speakers, 
                         managing event logistics, and boosting alumni engagement, resulting in an increase in alumni contributions.</p>
                     <p>- Collaborated to enhance ICS events, creating a dynamic environment for networking, socializing, and learning.</p>
@@ -107,12 +108,12 @@
                 <div class="experience-panel">
 
                     <div class="dbh-logo">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/uci_dbh.jpg">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/uci_dbh.jpg" alt="DBH Logo">
                     </div>
 
                     <h4>Computer Science Lab Tutor</h4>
-                    <h6>UC Irvine Donald Bren School of Information and Computer Sciences</h6>
-                    <h6>Apr 2023 - Jun 2023</h6>
+                    <h5>UC Irvine Donald Bren School of Information and Computer Sciences</h5>
+                    <h5>Apr 2023 - Jun 2023</h5>
                     <p>- Guided beginner students through the fundamental principles of programming.</p>
                     <p>- Collaborated closely with the course professor to enhance the course content and structure, thereby improving the overall learning experience.</p>
                     <p>- Offered personalized assistance, clarified intricate concepts, and instilled essential debugging skills.</p>
@@ -125,6 +126,7 @@
                 <h2>Extracurriculars</h2>
                 <div class="ec-panel">
                     <div class="ec-text">
+                        <h3></h3>
                         <h4>Taekwondo</h4>
                         <p>As a member of the Taekwondo Club at UCI, I actively participate in and attend 
                             practices, engaging in training sessions to continually improve my skills in 
