--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +26,7 @@
 
             <h1>contact</h1>
             <h2>Let's get in touch!</h2>
-
+            <h3></h3>
             <div class="contact-container">
                 <h4>Feel free to reach out to me through the following channels:</h4>
 
@@ -47,8 +46,6 @@
         <a id="emailButton" href="mailto:clarachenn1@gmail.com">
             <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/email-light.png" alt="Email Logo">
         </a>
-
-
  
      </body>
 
