--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 </ul>
             </nav>
              <button id="themeButton" onclick="toggleTheme()">
-                <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/themes/sun.png" alt="Light Theme">
+                <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/themes/sun.png" alt="Sun Image">
              </button>    
 
             <h1>contact</h1>
