--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             </nav>
 
             <button id="themeButton" onclick="toggleTheme()">
-                <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/themes/sun.png" alt="Light Theme">
+                <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/themes/sun.png" alt="Sun Image">
             </button>
 
             <h1>about me</h1>
