--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,12 @@
 
             <h1>contact</h1>
             <h2>Let's get in touch!</h2>
-            <h3></h3>
             <div class="contact-container">
-                <h4>Feel free to reach out to me through the following channels:</h4>
+                <h3>Feel free to reach out to me through the following channels:</h3>
 
                 <h3>Email: <a href="mailto:clarachenn1@gmail.com">clarachenn1@gmail.com</a></h3>
                 <h3>LinkedIn: <a href="https://www.linkedin.com/in/clarachenn/">clarachenn</a></h3>
+            </div>
                 
         </div>
 
